# serial-cli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.cmake
Source/: CMakeLists.txt  serial_cli.c
Source/Include/: serial_cli.h
Tests/: CMakeLists.txt  serial_cli_fixture.hpp  serial_cli_ut.cpp
examples/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  serial_cli.c
source/include/: serial_cli.h
src/: CMakeLists.txt  serial_cli.c  serial_cli_commands.c
src/include/: serial_cli.h
src/include_internal/: serial_cli_commands.h  serial_cli_internal.h
tests/: CMakeLists.txt  serial_cli_fixture.hpp  serial_cli_ut.cpp
tests/include/: serial_cli_fixture.hpp
